bug-fix kendo-toggle-switch overlapping when on state

--- a/src/styles/kendoUI/_kendo-forms.scss
+++ b/src/styles/kendoUI/_kendo-forms.scss
@@ -37,3 +37,6 @@ input[type=search]:hover+.far.fa-search {
   border-color: transparent;
 }
 
+.k-switch {
+  width: 6em;
+}
